--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,19 +1,18 @@
 ---
 import PageLayout from "@/layouts/Base";
 import { Image } from "@astrojs/image/components";
-import aboutImg from "../assets/about-astro.png";
+import LogoImg from "../assets/Logo.png";
 
 const meta = {
-	title: "Oops! You found a missing page!",
-	description: "Oops! It looks like this page is lost in space!",
+	title: "Error 404 Page",
+	description: "Error 404 Page!",
 };
 ---
 
 <PageLayout meta={meta}>
-	<h1 class="mb-6 title">404 | Oops something went wrong</h1>
-	<p class="mb-8">Please use the navigation to find your way back</p>
-	<div class="grid justify-center my-4 rotate-180">
-		<Image src={aboutImg} alt="A cartoon cactus looking at 'Astro.build' logo"
-		/>
+	<h1 class="mb-6 title">404 | Oops Pagina non Trovata</h1>
+	<p class="mb-8">Perfavore prova un'altra Pagina</p>
+	<div class="grid justify-center my-4">
+		<Image src={LogoImg} alt="Logo Michael Logo" />
 	</div>
 </PageLayout>
