--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,8 @@ import { sortMDByDate } from "@/util";
 import type { Post } from "@/types";
 
 const meta = {
-	title: "Astro Cactus",
-	description: "The perfect starter for your perfect blog.",
+	title: "Michael Bonfanti",
+	description: "Il mio Sito web.",
 };
 
 const MAX_POSTS = 10;
@@ -19,10 +19,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 	<section>
 		<h1 class="mb-6 title">Hello World!</h1>
 		<p class="mb-4">
-			Hi, I’m a theme for Astro, an example of how you can use this starter to
-			create a personal blog. If you want to know more about how you can
-			customise me, add more posts, and make it your own, click on one of the
-			social links which will take you to my repo.
+			Ciao, Mi Chiamo Michael e ho 19 Anni. sono un Appassionato Apple e
+			condivido la mia passione sui Social e sul mio Podcast, Inoltre sto
+			studiando per diventare svillupatore Java.
 		</p>
 		<SocialList />
 	</section>
@@ -39,7 +38,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 		</ul>
 	</section>
 	<section class="mt-16">
-		<h2 class="mb-4 text-xl title">Technologies</h2>
+		<h2 class="mb-4 text-xl title">Tecnolgie dietro il mio Sito</h2>
 		<ul class="space-y-4 sm:space-y-2">
 			<li>
 				<a
@@ -65,6 +64,16 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 			</li>
 			<li>
 				<a
+					href="https://unsplash.com"
+					target="_blank"
+					rel="noopener noreferrer"
+					class="inline-block cactus-link"
+					>Unsplash
+				</a>:
+				<p class="inline-block sm:mt-2">Free Image for your Site.</p>
+			</li>
+			<li>
+				<a
 					href="https://tailwindcss.com"
 					target="_blank"
 					rel="noopener noreferrer"
@@ -73,6 +82,30 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 				</a>:
 				<p class="inline-block sm:mt-2">
 					Rapidly build modern websites without ever leaving your HTML.
+				</p>
+			</li>
+			<li>
+				<a
+					href="https://github.com"
+					target="_blank"
+					rel="noopener noreferrer"
+					class="inline-block cactus-link"
+					>GitHub
+				</a>:
+				<p class="inline-block sm:mt-2">
+					Create yours repositories for backup and update code.
+				</p>
+			</li>
+			<li>
+				<a
+					href="https://www.netlify.com"
+					target="_blank"
+					rel="noopener noreferrer"
+					class="inline-block cactus-link"
+					>Netlify
+				</a>:
+				<p class="inline-block sm:mt-2">
+					Free Host Your Site.
 				</p>
 			</li>
 			<li>
