--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,12 +5,12 @@ const year = new Date().getFullYear();
 <footer>
 	<div>
 		Copyright &copy; {year}
-		<span aria-label="rocket emoji">🚀</span>
-		Astro Cactus
+		<span aria-label="computer emoji">💻</span>
+		Michael Bonfanti
 	</div>
 	<nav aria-label="More on this site">
 		<a href="/">Home</a>
-		<a href="/about">About</a>
+		<a href="/project">Project</a>
 		<a href="/posts">Blog</a>
 	</nav>
 </footer>
