Update Code Project Page

--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -2,7 +2,7 @@
 import PageLayout from "@/layouts/Base";
 import { Image } from "@astrojs/image/components";
 import ProjectImg from "../assets/Project.jpg";
-import PodcastImg from "../assets/Copertina Podcast MichaelOnTech.jpg";
+import MichaelOnTechImg from "../assets/Copertina Podcast MichaelOnTech.jpg";
 
 const meta = {
 	title: "Project",
@@ -19,7 +19,7 @@ const meta = {
 		</div>
 		<p>MichaelOnTech Podcast</p>
 		<div class="space-y-6">
-			<Image src={PodcastImg} alt="Copertina Podcast MichaelOnTech" />
+			<Image src={MichaelOnTechImg} alt="Copertina Podcast MichaelOnTech" />
 		</div>
 		<p>
 			Ascolta il Podcast su
